--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin-Recipes</h1>
+    <ul>
+        li><a href="recipes/samosa.html">Samosa</a></li>
+    </ul>
 </body>
 </html>
