--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -7,6 +7,35 @@
 </head>
 <body>
     <h1>Samosa Recipe</h1>
+    <img src="images/samosa-recipe.jpg" alt="A photo of samosas">
+    <p>Samosas are a popular Indian snack that is enjoyed all over the world. They are a deep-fried pastry filled with a savory mixture of spiced potatoes, onions, peas, and sometimes meat. Samosas are typically served with a chutney or dipping sauce and are perfect for parties, picnics, or as a tasty snack.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 cups all-purpose flour</li>
+        <li>1/4 cup vegetable oil</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/2 cup water</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 teaspoon cumin seeds</li>
+        <li>1 onion, chopped</li>
+        <li>1 pound ground beef</li>
+        <li>1 teaspoon ground turmeric</li>
+        <li>1 teaspoon ground coriander</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 teaspoon chili powder</li>
+        <li>1 teaspoon salt</li>
+        <li>1 cup frozen peas</li>
+        <li>1/2 cup chopped fresh cilantro</li>
+        <li>1 quart oil for deep frying</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>In a medium bowl, stir together the flour, 1/4 cup oil, salt, and water. Work into a smooth dough, then cover, and set aside.</li>
+        <li>Heat 1 tablespoon oil in a skillet over medium heat. Stir in cumin seeds, and cook until they begin to pop. Mix in onion, and cook until golden brown. Add ground beef, and season with turmeric, ground coriander, cumin, chili powder, and salt. Cook until the beef is no longer pink. Stir in peas and cilantro, and remove from heat.</li>
+        <li>Preheat oil in a deep-fryer or large saucepan to 375 degrees F (190 degrees C).</li>
+        <li>Divide the dough into 15 balls, and roll each ball into a 4 inch circle. Cut each circle in half. Dab a small amount of water along the edges of the circle, and form a cone shape around your hand. Seal the edges, and fill with a spoonful of the meat mixture. Fold the top over the filling, and seal. Repeat with remaining dough and filling.</li>
+        <li>Fry the filled samosas in the preheated oil until golden brown, about 5 minutes. Serve hot.</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
