--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin-Recipes</h1>
     <ul>
-        li><a href="recipes/samosa.html">Samosa</a></li>
+        <li><a href="recipes/samosa.html">Samosa</a></li>
+        <li><a href="recipes/biryani.html">Biryani</a></li>
+        
     </ul>
 </body>
 </html>
