Fixed image not showing up in samosa.html
fixed image issue and adjusted the size of image in samosa recipe

--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Samosa Recipe</h1>
-    <img src="images/samosa-recipe.jpg" alt="A photo of samosas">
+    <img src="../images/samosa-recipe.jpg" alt="A photo of samosas" width="300" height="200">
     <p>Samosas are a popular Indian snack that is enjoyed all over the world. They are a deep-fried pastry filled with a savory mixture of spiced potatoes, onions, peas, and sometimes meat. Samosas are typically served with a chutney or dipping sauce and are perfect for parties, picnics, or as a tasty snack.</p>
     <h2>Ingredients</h2>
     <ul>
