Added biryani recipe details
detailed recipe of biryani added with a image of the recipe

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,6 +7,48 @@
 </head>
 <body>
     <h1>Biryani</h1>
+    <img src="../images/chicken-biryani-recipe.jpg" alt="A photo of chicken biryani" width="300" height="200">
+    <p>Biryani is a mixed rice dish originating among the Muslims of the Indian subcontinent. It is made with Indian spices, rice, and usually some type of meat (chicken, beef, goat, pork, lamb, prawn, or fish), and sometimes, in addition, eggs and/or vegetables such as potatoes in certain regional varieties.</p>
+    <p>It is popular throughout the Indian subcontinent and among the diaspora from the region. It is also prepared in other regions such as Iraqi Kurdistan.</p>
+    <p>Ingredients:</p>
+    <ul>
+        <li>Basmati rice</li>
+        <li>Chicken</li>
+        <li>Yogurt</li>
+        <li>Onions</li>
+        <li>Tomatoes</li>
+        <li>Garlic</li>
+        <li>Ginger</li>
+        <li>Green chilies</li>
+        <li>Coriander leaves</li>
+        <li>Mint leaves</li>
+        <li>Spices
+            <ul>
+                <li>Cumin seeds</li>
+                <li>Coriander seeds</li>
+                <li>Black pepper</li>
+                <li>Cloves</li>
+                <li>Cinnamon</li>
+                <li>Cardamom</li>
+                <li>Bay leaves</li>
+                <li>Star anise</li>
+                <li>Mace</li>
+                <li>Nutmeg</li>
+                <li>Red chili powder</li>
+                <li>Turmeric</li>
+                <li>Saffron</li>
+            </ul>
+        </li>
+    </ul>
+    <p>Recipe:</p>
+    <ol>
+        <li>Marinate the chicken with yogurt, ginger, garlic, green chilies, coriander leaves, mint leaves, and spices.</li>
+        <li>Soak the basmati rice in water for 30 minutes.</li>
+        <li>Boil the rice with whole spices until 70% cooked.</li>
+        <li>Layer the marinated chicken and partially cooked rice in a pot.</li>
+        <li>Seal the pot with dough and cook on low heat until the chicken is tender and the rice is fully cooked.</li>
+        <li>Enjoy your delicious biryani!</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
